# fastapi

./: .coverage  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
app/: broker.py  database.py  main.py
app/core/: deps.py
app/models/: job.py  todo.py  user.py
app/routers/: auth.py  job.py  todo.py
app/schemas/: auth.py  job.py  todo.py
app/services/: auth.py  job.py  todo.py
app/tasks/: sample.py
docs/: アーキテクチャ.md  仕様書.md  要件定義書.md
scripts/: create_user.py
static/: app.js  index.html  jobs.html  login.html
tests/: conftest.py  test_auth.py  test_jobs.py  test_todos.py
